inclui um arquivo novo e modifiquei a lista de tarefas

--- a/listadeTarefas.html
+++ b/listadeTarefas.html
@@ -72,6 +72,7 @@ const limparTarefas = () => {
     function deleteItem( ) {
     const listItem = this.parentNode    
     const list = listItem.parentNode;
+    console.log('isso e uma mudança')
     
      list.removeChild(listItem);
     }
