atualizando comandos do git

--- a/listadeTarefas.html
+++ b/listadeTarefas.html
@@ -9,8 +9,9 @@
     <!-- git add *  -->
     <!-- git commit -m "msn"-->
     <!-- git push -->
+    <!-- git pull(puxar) -->
     <!-- git status -->
-    <!-- git fetch -->
+    <!-- git fetch (buscar atualizaçoes sem puxar) -->
     <style>
      
         .marcar{
